--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
 <div class="h-100 w-auto" style="background-color: #eee;">
     <div class="col-md-12 text text-center">
-        <div class="img mb-6 pt-5"><img class="rounded-circle" src="me.jpg" alt=""></div>
+        <div class="img mb-6 pt-5"><img class="rounded-circle" src="photo.jpg" alt=""></div>
         <div class="desc pt-3">
             <h2 class="subheading">Hello I'm</h2>
             <h1 class="mb-6">Tanmay Chhatbar</h1>
             <p class="mb-6">
                 Studying at CU-ICAR
             </p>
-            <p><a href="cv.pdf" class="btn-custom">More About Me</a></p>
+            <p><a href="resume.pdf" class="btn-custom">More About Me</a></p>
         </div>
     </div>
 </div>
