--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="h-100 w-auto" style="background-color: #eee;">
     <div class="col-md-12 text text-center">
-        <div class="img mb-6 pt-5"><img class="rounded-circle" src="photo.jpg" alt=""></div>
+        <div class="img mb-6 pt-5"><img class="rounded-circle" src="photo.png" alt=""></div>
         <div class="desc pt-3">
             <h2 class="subheading">Hello I'm</h2>
             <h1 class="mb-6">Tanmay Chhatbar</h1>
