--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8">
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css">
     <!-- Styling -->
     <link href="css/style.css" type="text/css" rel="stylesheet">
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet" type="text/css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="h-100 w-auto" style="background-color: #eee;">
