--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="h-100 w-auto" style="background-color: #eee;">
+    <div style="background-color: #eee;">
         <div class="col-md-12 text text-center">
             <div class="img mb-6 pt-5"><img class="rounded-circle" src="photo.png" alt=""></div>
             <div class="desc pt-3">
@@ -47,8 +47,12 @@
                         }
                     </script>
                 </p>
-                
+
                 <p><a href="resume.pdf" class="btn-custom">More About Me</a></p>
+                <h4><a href="vids.html" class="btn-custom">Like cool projects?</a></h4>
+                
+                <br>
+
             </div>
         </div>
     </div>
