--- a/projects.html
+++ b/projects.html
@@ -48,6 +48,8 @@
 
         iframe {
             border: 0px;
+            width:50%;
+            height:50%;
         }
     </style>
 
@@ -70,9 +72,9 @@
             Finishing 3<sup>rd</sup> place overall
         </h4>
         <p align="center">
-            <iframe width="40%" height="50%" src="https://www.youtube.com/embed/G851yVFitqQ"></iframe>
+            <iframe src="https://www.youtube.com/embed/G851yVFitqQ"></iframe>
 
-            <iframe width="40%" height="50%" src="https://www.youtube.com/embed/twtrokqZ5k0"></iframe>
+            <iframe src="https://www.youtube.com/embed/twtrokqZ5k0"></iframe>
 
         </p>
     </div>
@@ -87,10 +89,10 @@
             Finishing Top 6
         </h4>
         <p align="center">
-            <iframe width="40%" height="50%" src="https://www.youtube.com/embed/OrcEB9SaSN0"></iframe>
+            <iframe src="https://www.youtube.com/embed/OrcEB9SaSN0"></iframe>
 
 
-            <iframe width="40%" height="50%" src="https://www.youtube.com/embed/0PYmlGL2mYo"></iframe>
+            <iframe src="https://www.youtube.com/embed/0PYmlGL2mYo"></iframe>
 
             <br>
             Competition video coming soon
@@ -124,7 +126,7 @@
             Finishing Top 6
         </h4>
         <p align="center">
-            <iframe width="40%" height="50%" src="https://www.youtube.com/embed/3Mc-scsVYqA"></iframe>
+            <iframe src="https://www.youtube.com/embed/3Mc-scsVYqA"></iframe>
             <br>
 
 
