--- a/projects.html
+++ b/projects.html
@@ -48,8 +48,8 @@
 
         iframe {
             border: 0px;
-            width:50%;
-            height:50%;
+            width:640px;
+            height:360px;
         }
     </style>
 
