--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     </script>
                 </p>
 
-                <p><a href="resume.pdf" class="btn-custom">More About Me</a></p>
-                <h4><a href="projects.html" class="btn-custom">Like cool projects?</a></h4>
+                <p><a href="resume.pdf" class="btn-custom">More About Me</a> 🔗</p>
+                <h4><a href="projects.html" class="btn-custom">Like cool projects?</a> 🔗</h4>
                 
                 <br>
 
