--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </p>
 
                 <p><a href="resume.pdf" class="btn-custom">More About Me</a> 🔗</p>
-                <h4><a href="projects.html" class="btn-custom">Like cool projects?</a> 🔗</h4>
+                <h4><a href="projects.html" class="btn-custom">My projects</a> 🔗</h4>
                 
                 <br>
 
