--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
 
     <div>
         <h2 align="center">
-            Boeing Aeromodelling 2019-20 - Kharagpur
+            Boeing Aeromodelling 2019-20 - IIT Kharagpur
         </h2>
         <h4 align="center">
             Finishing 3<sup>rd</sup> place overall
@@ -83,7 +83,7 @@
 
     <div>
         <h2 align="center">
-            Boeing Aeromodelling 2019-20 - Mumbai
+            Boeing Aeromodelling 2019-20 - IIT Mumbai
         </h2>
         <h4 align="center">
             Finishing Top 6
@@ -120,7 +120,7 @@
 
     <div>
         <h2 align="center">
-            Boeing Aeromodelling 2018 - Mumbai
+            Boeing Aeromodelling 2018 - IIT Mumbai
         </h2>
         <h4 align="center">
             Finishing Top 6
