--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
     <br>
 
     <h1 align="center">
-        <a href="https://www.youtube.com/c/TanmayChhatbar/videos" target="_blank" class="btn-custom" color=black><u>Some cool projects</u></a> 🔗
+        <a href="https://www.youtube.com/c/TanmayChhatbar/videos" target="_blank" class="btn-custom" color=black>Some of my projects</a> 🔗
     </h1>
     <hr color=black>
     <br>
