--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link href="css/style.css" type="text/css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
         type="text/css">
+    <style>
+        .mylinks{
+            margin-left: 15px;
+            margin-right: 15px;
+        }
+    </style>
 </head>
 
 <body>
@@ -49,9 +55,14 @@
                 </p>
 
                 <p><a href="resume.pdf" class="btn-custom">More About Me</a> 🔗</p>
-                <h4><a href="projects.html" class="btn-custom">My projects</a> 🔗</h4>
-                
+                <h4><a href="projects.html" class="btn-custom">Like cool projects?</a> 🔗</h4>
                 <br>
+                
+                <a class="mylinks" href="https://linkedin.com/in/tanmaychhatbar"><img src="images/logo_linkedin.png" width=24px></a>
+                <a class="mylinks" href="https://github.com/TanmayChhatbar"><img src="images/logo_github.png" width=24px></a> 
+                <a class="mylinks" href="https://www.instagram.com/tanmaychhatbar/"><img src="images/logo_insta.png" width=24px></a> 
+                <a class="mylinks" href="https://www.youtube.com/c/TanmayChhatbar/"><img src="images/logo_yt.png" width=24px></a> 
+                <br><br><br>
 
             </div>
         </div>
