--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         type="text/css">
     <style>
         .mylinks{
-            margin-left: 15px;
-            margin-right: 15px;
+            margin-left: 30px;
+            margin-right: 30px;
         }
     </style>
 </head>
@@ -54,10 +54,10 @@
                     </script>
                 </p>
 
-                <p><a href="resume.pdf" class="btn-custom">More About Me</a> 🔗</p>
+                <h5><a href="resume.pdf" class="btn-custom">More About Me</a> 🔗</h5>
                 <h4><a href="projects.html" class="btn-custom">Like cool projects?</a> 🔗</h4>
                 <br>
-                
+                <hr><br>
                 <a class="mylinks" href="https://linkedin.com/in/tanmaychhatbar"><img src="images/logo_linkedin.png" width=24px></a>
                 <a class="mylinks" href="https://github.com/TanmayChhatbar"><img src="images/logo_github.png" width=24px></a> 
                 <a class="mylinks" href="https://www.instagram.com/tanmaychhatbar/"><img src="images/logo_insta.png" width=24px></a> 
