--- a/projects.html
+++ b/projects.html
@@ -1,19 +1,14 @@
 <html>
-
-<head>
-
-    <title>Projects - Tanmay Chhatbar</title>
-    <meta charset="UTF-8">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        type="text/css">
-
-    <link href="css/style.css" type="text/css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
-        type="text/css">
-
-    <style>
-        body {
+ <head>
+  <title>
+   Projects - Tanmay Chhatbar
+  </title>
+  <meta charset="utf-8"/>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+  <link href="css/style.css" rel="stylesheet" type="text/css"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet" type="text/css"/>
+  <style>
+   body {
             background-color: #eee;
         }
 
@@ -51,93 +46,137 @@
             width:640px;
             height:360px;
         }
-    </style>
-
-</head>
-
-<body>
-    <br>
-
-    <h1 align="center">
-        <a href="https://www.youtube.com/c/TanmayChhatbar/videos" target="_blank" class="btn-custom" color=black>Some of my projects</a> 🔗
-    </h1>
-    <hr color=black>
-    <br>
-
+  </style>
+ </head>
+ <body>
+  <br/>
+  <h1 align="center">
+   <a class="btn-custom" color="black" href="https://www.youtube.com/c/TanmayChhatbar/videos" target="_blank">
+    Some of my projects
+   </a>
+   🔗
+  </h1>
+  <hr color="black"/>
+  <br/>
+  <div>
+   <h2 align="center">
+    Boeing Aeromodelling 2019-20 - IIT Kharagpur
+   </h2>
+   <h4 align="center">
+    Finishing 3<sup>rd</sup>
+    place overall
+   </h4>
+   <p align="center">
+    <iframe src="https://www.youtube.com/embed/G851yVFitqQ">
+    </iframe>
+    <iframe src="https://www.youtube.com/embed/twtrokqZ5k0">
+    </iframe>
+   </p>
+  </div>
+  <hr color="black" width="50%"/>
+  <br>
+   <div>
+    <h2 align="center">
+     Boeing Aeromodelling 2019-20 - IIT Mumbai
+    </h2>
+    <h4 align="center">
+     Finishing Top 6
+    </h4>
+    <p align="center">
+     <iframe src="https://www.youtube.com/embed/OrcEB9SaSN0">
+     </iframe>
+     <iframe src="https://www.youtube.com/embed/0PYmlGL2mYo">
+     </iframe>
+     <br/>
+     <h6 align="center">
+      More coming soon
+     </h6>
+     <br/>
+    </p>
+   </div>
+   <hr color="black" width="50%"/>
+   <br>
     <div>
+     <h2 align="center">
+      SAE Aero Design East 2019
+     </h2>
+     <h4 align="center">
+      7th* in Mission Performance
+     </h4>
+     <p align="center">
+      <br/>
+      <h6 align="center">
+       More coming soon
+      </h6>
+      <br/>
+     </p>
+    </div>
+    <hr color="black" width="50%"/>
+    <br>
+     <div>
+      <h2 align="center">
+       Boeing Aeromodelling 2018 - IIT Mumbai
+      </h2>
+      <h4 align="center">
+       Finishing Top 6
+      </h4>
+      <p align="center">
+       <iframe src="https://www.youtube.com/embed/3Mc-scsVYqA">
+       </iframe>
+      </p>
+     </div>
+     <hr color="black" width="50%"/>
+     <br>
+      <div>
+       <h2 align="center">
+        i1Pro 3 Automated Plotter
+       </h2>
+       <h4 align="center">
+        Designed, manufactured and programmed by self
+       </h4>
+       <p align="center">
+        <iframe src="https://www.youtube.com/embed/pWplQDCc0bk">
+        </iframe>
+       </p>
+      </div>
+      <hr color="black" width="50%"/>
+      <br>
+       <div>
         <h2 align="center">
-            Boeing Aeromodelling 2019-20 - IIT Kharagpur
+         Because fun is important as well
         </h2>
         <h4 align="center">
-            Finishing 3<sup>rd</sup> place overall
+         No?
         </h4>
         <p align="center">
-            <iframe src="https://www.youtube.com/embed/G851yVFitqQ"></iframe>
-
-            <iframe src="https://www.youtube.com/embed/twtrokqZ5k0"></iframe>
-
+         <iframe src="https://www.youtube.com/embed/nO6BWNPSGuY">
+         </iframe>
+         <iframe src="https://www.youtube.com/embed/rsrUuE2ELrc">
+         </iframe>
+         <br/>
+         <h6 align="center">
+          More coming soon
+         </h6>
+         <br/>
         </p>
-    </div>
-    <hr width=50% color=black>
-    <br />
-
-    <div>
-        <h2 align="center">
-            Boeing Aeromodelling 2019-20 - IIT Mumbai
-        </h2>
-        <h4 align="center">
-            Finishing Top 6
-        </h4>
-        <p align="center">
-            <iframe src="https://www.youtube.com/embed/OrcEB9SaSN0"></iframe>
-
-
-            <iframe src="https://www.youtube.com/embed/0PYmlGL2mYo"></iframe>
-
-            <br>
-            Competition video coming soon
-            <br>
-
-        </p>
-    </div>
-    <hr width=50% color=black>
-    <br />
-
-    <div>
-        <h2 align="center">
-            SAE Aero Design East 2019
-        </h2>
-        <h4 align="center">
-            7th* in Mission Performance
-        </h4>
-        <p align="center">
-            Competition video coming soon
-            <br />
-        </p>
-    </div>
-    <hr width=50% color=black>
-    <br />
-
-    <div>
-        <h2 align="center">
-            Boeing Aeromodelling 2018 - IIT Mumbai
-        </h2>
-        <h4 align="center">
-            Finishing Top 6
-        </h4>
-        <p align="center">
-            <iframe src="https://www.youtube.com/embed/3Mc-scsVYqA"></iframe>
-            <br>
-
-
-            <hr width=80%>
-        </p>
-        <br />
-    </div>
-    <div align="center">
-        <a href="index.html" class="btn-custom"><u>Back to my homepage</u></a> 🔗
-    </div>
-    <br>
-    <br>
-
-</body>
+       </div>
+       <hr color="black" width="50%"/>
+       <br>
+        <div align="center">
+         <a class="btn-custom" href="index.html">
+          <u>
+           Back to my homepage
+          </u>
+         </a>
+         🔗
+        </div>
+        <br/>
+        <br/>
+       </br>
+      </br>
+     </br>
+    </br>
+   </br>
+  </br>
+ </body>
+</html>
