--- a/projects.html
+++ b/projects.html
@@ -146,7 +146,7 @@
          Because fun is important as well
         </h2>
         <h4 align="center">
-         No?
+         Right? 
         </h4>
         <p align="center">
          <iframe src="https://www.youtube.com/embed/nO6BWNPSGuY">
