--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
    <br>
     <div>
      <h2 align="center">
-      SAE Aero Design East 2019
+      SAE Aero Design East 2019 - Texas
      </h2>
      <h4 align="center">
       7th* in Mission Performance
@@ -129,7 +129,7 @@
      <br>
       <div>
        <h2 align="center">
-        i1Pro 3 Automated Plotter
+        i1Pro 3 Automated Plotter 2021
        </h2>
        <h4 align="center">
         Designed, manufactured and programmed by self
@@ -143,16 +143,12 @@
       <br>
        <div>
         <h2 align="center">
-         Because fun is important as well
+         Improvements in the Factory - 2016-2020
         </h2>
         <h4 align="center">
-         Right? 
+         Because stagnation is the opposite of progress
         </h4>
         <p align="center">
-         <iframe src="https://www.youtube.com/embed/nO6BWNPSGuY">
-         </iframe>
-         <iframe src="https://www.youtube.com/embed/rsrUuE2ELrc">
-         </iframe>
          <br/>
          <h6 align="center">
           More coming soon
@@ -162,16 +158,56 @@
        </div>
        <hr color="black" width="50%"/>
        <br>
-        <div align="center">
-         <a class="btn-custom" href="index.html">
-          <u>
-           Back to my homepage
-          </u>
-         </a>
-         🔗
+        <div>
+         <h2 align="center">
+          Speedy G
+         </h2>
+         <h4 align="center">
+          "I am Speed!", said the little Bird
+         </h4>
+         <p align="center">
+          <br/>
+          <h6 align="center">
+           More coming soon
+          </h6>
+          <br/>
+         </p>
         </div>
-        <br/>
-        <br/>
+        <hr color="black" width="50%"/>
+        <br>
+         <div>
+          <h2 align="center">
+           Because fun is important as well
+          </h2>
+          <h4 align="center">
+           Am I right?
+          </h4>
+          <p align="center">
+           <iframe src="https://www.youtube.com/embed/nO6BWNPSGuY">
+           </iframe>
+           <iframe src="https://www.youtube.com/embed/rsrUuE2ELrc">
+           </iframe>
+           <br/>
+           <h6 align="center">
+            More coming soon
+           </h6>
+           <br/>
+          </p>
+         </div>
+         <hr color="black" width="50%"/>
+         <br>
+          <div align="center">
+           <a class="btn-custom" href="index.html">
+            <u>
+             Back to my homepage
+            </u>
+           </a>
+           🔗
+          </div>
+          <br/>
+          <br/>
+         </br>
+        </br>
        </br>
       </br>
      </br>
