--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
         type="text/css">
     <style>
-        .mylinks{
+        body {
+            position: absolute;
+            background: #eee;
+            width: 100%;
+            height: 100%;
+        }
+
+        .mylinks {
             margin-left: 30px;
             margin-right: 30px;
         }
@@ -20,16 +27,19 @@
 </head>
 
 <body>
-    <div style="background-color: #eee;">
+    <div>
         <div class="col-md-12 text text-center">
-            <div class="img mb-6 pt-5"><img class="rounded-circle" src="photo.png" alt=""></div>
+            <div class="img mb-6 pt-5"><img class="rounded-circle" src="images/photo.png" alt=""
+                    style="height:30vh;width:height;"></div>
             <div class="desc pt-3">
-                <h2 class="subheading">Hello! I'm</h2>
+                <h3 class="subheading">Hello! I'm</h3>
                 <h1 class="mb-6">Tanmay Chhatbar</h1>
+                <br>
 
                 <p class="mb-6">
                     Studying at CU-ICAR</p>
 
+                <hr color="black" width="50%" />
                 <p class="mb-6">
                     <script type="text/javascript">
                         function getQueryVariable(variable) {
@@ -54,16 +64,22 @@
                     </script>
                 </p>
 
+                <br>
                 <h5><a href="resume.pdf" class="btn-custom">More About Me</a> 🔗</h5>
                 <h4><a href="projects.html" class="btn-custom">Like cool projects?</a> 🔗</h4>
                 <br>
-                <hr><br>
-                <a class="mylinks" href="https://linkedin.com/in/tanmaychhatbar"><img src="images/logo_linkedin.png" width=24px></a>
-                <a class="mylinks" href="https://github.com/TanmayChhatbar"><img src="images/logo_github.png" width=24px></a> 
-                <a class="mylinks" href="https://www.instagram.com/tanmaychhatbar/"><img src="images/logo_insta.png" width=24px></a> 
-                <a class="mylinks" href="https://www.youtube.com/c/TanmayChhatbar/"><img src="images/logo_yt.png" width=24px></a> 
-                <br><br><br>
+                <hr color="black" width="75%" />
+                <br>
 
+                <a class="mylinks" href="https://linkedin.com/in/tanmaychhatbar"><img src="images/logo_linkedin.png"
+                        width=24px></a>
+                <a class="mylinks" href="https://github.com/TanmayChhatbar"><img src="images/logo_github.png"
+                        width=24px></a>
+                <a class="mylinks" href="https://www.youtube.com/c/TanmayChhatbar/"><img src="images/logo_yt.png"
+                        width=24px></a>
+                <a class="mylinks" href="https://www.instagram.com/tanmaychhatbar/"><img src="images/logo_insta.png"
+                        width=24px></a>
+                <br><br><br>
             </div>
         </div>
     </div>
