Update to add Grabcad links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div>
         <div class="col-md-12 text text-center">
             <div class="img mb-6 pt-5"><img class="rounded-circle" src="images/photo.png" alt=""
-                    style="height:30vh;width:height;"></div>
+                    style="height:35vh;width:height;"></div>
             <div class="desc pt-3">
                 <h3 class="subheading">Hello! I'm</h3>
                 <h1 class="mb-6">Tanmay Chhatbar</h1>
@@ -66,14 +66,17 @@
 
                 <br>
                 <h5><a href="resume.pdf" class="btn-custom">More About Me</a> 🔗</h5>
-                <h4><a href="projects.html" class="btn-custom">Like cool projects?</a> 🔗</h4>
+                <br>
+                <h4><a href="projects.html" class="btn-custom">My projects</a> 🔗</h4>
                 <br>
                 <hr color="black" width="75%" />
                 <br>
 
+                <a class="mylinks" href="https://grabcad.com/tanmay.chhatbar-1"><img src="images/logo_grabcad.png"
+                    width=24px></a>
+                    <a class="mylinks" href="https://github.com/TanmayChhatbar"><img src="images/logo_github.png"
+                    width=24px></a>
                 <a class="mylinks" href="https://linkedin.com/in/tanmaychhatbar"><img src="images/logo_linkedin.png"
-                        width=24px></a>
-                <a class="mylinks" href="https://github.com/TanmayChhatbar"><img src="images/logo_github.png"
                         width=24px></a>
                 <a class="mylinks" href="https://www.youtube.com/c/TanmayChhatbar/"><img src="images/logo_yt.png"
                         width=24px></a>
