--- a/projects.html
+++ b/projects.html
@@ -1,14 +1,17 @@
 <html>
- <head>
-  <title>
-   Projects - Tanmay Chhatbar
-  </title>
-  <meta charset="utf-8"/>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-  <link href="css/style.css" rel="stylesheet" type="text/css"/>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet" type="text/css"/>
-  <style>
-   body {
+
+<head>
+    <title>
+        Projects - Tanmay Chhatbar
+    </title>
+    <meta charset="utf-8" />
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+        type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
+        type="text/css" />
+    <style>
+        body {
             background-color: #eee;
         }
 
@@ -43,176 +46,178 @@
 
         iframe {
             border: 0px;
-            width:640px;
-            height:360px;
+            width: 640px;
+            height: 360px;
         }
-  </style>
- </head>
- <body>
-  <br/>
-  <h1 align="center">
-   <a class="btn-custom" color="black" href="https://www.youtube.com/c/TanmayChhatbar/videos" target="_blank">
-    Some of my projects
-   </a>
-   🔗
-  </h1>
-  <hr color="black"/>
-  <br/>
-  <div>
-   <h2 align="center">
-    Boeing Aeromodelling 2019-20 - IIT Kharagpur
-   </h2>
-   <h4 align="center">
-    Finishing 3<sup>rd</sup>
-    place overall
-   </h4>
-   <p align="center">
-    <iframe src="https://www.youtube.com/embed/G851yVFitqQ">
-    </iframe>
-    <iframe src="https://www.youtube.com/embed/twtrokqZ5k0">
-    </iframe>
-   </p>
-  </div>
-  <hr color="black" width="50%"/>
-  <br>
-   <div>
-    <h2 align="center">
-     Boeing Aeromodelling 2019-20 - IIT Mumbai
-    </h2>
-    <h4 align="center">
-     Finishing Top 6
-    </h4>
-    <p align="center">
-     <iframe src="https://www.youtube.com/embed/OrcEB9SaSN0">
-     </iframe>
-     <iframe src="https://www.youtube.com/embed/0PYmlGL2mYo">
-     </iframe>
-     <br/>
-     <h6 align="center">
-      More coming soon
-     </h6>
-     <br/>
-    </p>
-   </div>
-   <hr color="black" width="50%"/>
-   <br>
+    </style>
+</head>
+
+<body>
+    <br />
+    <h1 align="center">
+        <a class="btn-custom" color="black" href="https://www.youtube.com/c/TanmayChhatbar/videos" target="_blank">
+            Some of my projects
+        </a>
+        🔗
+    </h1>
+    <hr color="black" />
+    <br />
     <div>
-     <h2 align="center">
-      SAE Aero Design East 2019 - Texas
-     </h2>
-     <h4 align="center">
-      7th* in Mission Performance
-     </h4>
-     <p align="center">
-      <br/>
-      <h6 align="center">
-       More coming soon
-      </h6>
-      <br/>
-     </p>
-    </div>
-    <hr color="black" width="50%"/>
-    <br>
-     <div>
-      <h2 align="center">
-       Boeing Aeromodelling 2018 - IIT Mumbai
-      </h2>
-      <h4 align="center">
-       Finishing Top 6
-      </h4>
-      <p align="center">
-       <iframe src="https://www.youtube.com/embed/3Mc-scsVYqA">
-       </iframe>
-      </p>
-     </div>
-     <hr color="black" width="50%"/>
-     <br>
-      <div>
-       <h2 align="center">
-        i1Pro 3 Automated Plotter 2021
-       </h2>
-       <h4 align="center">
-        Designed, manufactured and programmed by self
-       </h4>
-       <p align="center">
-        <iframe src="https://www.youtube.com/embed/pWplQDCc0bk">
-        </iframe>
-       </p>
-      </div>
-      <hr color="black" width="50%"/>
-      <br>
-       <div>
         <h2 align="center">
-         Improvements in the Factory - 2016-2020
+            Boeing Aeromodelling 2019-20 - IIT Kharagpur
         </h2>
         <h4 align="center">
-         Because stagnation is the opposite of progress
+            Finishing 3<sup>rd</sup>
+            place overall
         </h4>
         <p align="center">
-         <br/>
-         <h6 align="center">
-          More coming soon
-         </h6>
-         <br/>
+            <iframe src="https://www.youtube.com/embed/G851yVFitqQ">
+            </iframe>
+            <iframe src="https://www.youtube.com/embed/twtrokqZ5k0">
+            </iframe>
         </p>
-       </div>
-       <hr color="black" width="50%"/>
-       <br>
-        <div>
-         <h2 align="center">
-          Speedy G
-         </h2>
-         <h4 align="center">
-          "I am Speed!", said the little Bird
-         </h4>
-         <p align="center">
-          <br/>
-          <h6 align="center">
-           More coming soon
-          </h6>
-          <br/>
-         </p>
-        </div>
-        <hr color="black" width="50%"/>
-        <br>
-         <div>
-          <h2 align="center">
-           Because fun is important as well
-          </h2>
-          <h4 align="center">
-           Am I right?
-          </h4>
-          <p align="center">
-           <iframe src="https://www.youtube.com/embed/nO6BWNPSGuY">
-           </iframe>
-           <iframe src="https://www.youtube.com/embed/rsrUuE2ELrc">
-           </iframe>
-           <br/>
-           <h6 align="center">
+    </div>
+    <hr color="black" width="50%" />
+    <br>
+    <div>
+        <h2 align="center">
+            i1Pro 3 Automated Plotter 2021
+        </h2>
+        <h4 align="center">
+            Designed, manufactured and programmed by self
+        </h4>
+        <p align="center">
+            <iframe src="https://www.youtube.com/embed/pWplQDCc0bk">
+            </iframe>
+        </p>
+    </div>
+    <hr color="black" width="50%" />
+    <br>
+    <div>
+        <h2 align="center">
+            Boeing Aeromodelling 2019-20 - IIT Mumbai
+        </h2>
+        <h4 align="center">
+            Finishing Top 6
+        </h4>
+        <p align="center">
+            <iframe src="https://www.youtube.com/embed/OrcEB9SaSN0">
+            </iframe>
+            <iframe src="https://www.youtube.com/embed/0PYmlGL2mYo">
+            </iframe>
+            <br />
+        <h6 align="center">
             More coming soon
-           </h6>
-           <br/>
-          </p>
-         </div>
-         <hr color="black" width="50%"/>
-         <br>
-          <div align="center">
-           <a class="btn-custom" href="index.html">
+        </h6>
+        <br />
+        </p>
+    </div>
+    <hr color="black" width="50%" />
+    <br>
+    <div>
+        <h2 align="center">
+            SAE Aero Design East 2019 - Texas
+        </h2>
+        <h4 align="center">
+            7th* in Mission Performance
+        </h4>
+        <p align="center">
+            <br />
+        <h6 align="center">
+            More coming soon
+        </h6>
+        <br />
+        </p>
+    </div>
+    <hr color="black" width="50%" />
+    <br>
+    <div>
+        <h2 align="center">
+            Improvements in the Factory - 2016-2020
+        </h2>
+        <h4 align="center">
+            Because stagnation is the opposite of progress
+        </h4>
+        <p align="center">
+            <br />
+        <h6 align="center">
+            More coming soon
+        </h6>
+        <br />
+        </p>
+    </div>
+    <hr color="black" width="50%" />
+    <br>
+    <div>
+        <h2 align="center">
+            Boeing Aeromodelling 2018 - IIT Mumbai
+        </h2>
+        <h4 align="center">
+            Finishing Top 6
+        </h4>
+        <p align="center">
+            <iframe src="https://www.youtube.com/embed/3Mc-scsVYqA">
+            </iframe>
+        </p>
+    </div>
+    <hr color="black" width="50%" />
+    <br>
+    <div>
+        <h2 align="center">
+            Speedy G
+        </h2>
+        <h4 align="center">
+            "I am Speed!", said the little Bird
+        </h4>
+        <p align="center">
+            <br />
+        <h6 align="center">
+            More coming soon
+        </h6>
+        <br />
+        </p>
+    </div>
+    <hr color="black" width="50%" />
+    <br>
+    <div>
+        <h2 align="center">
+            Because fun is important as well
+        </h2>
+        <h4 align="center">
+            Am I right?
+        </h4>
+        <p align="center">
+            <iframe src="https://www.youtube.com/embed/nO6BWNPSGuY">
+            </iframe>
+            <iframe src="https://www.youtube.com/embed/rsrUuE2ELrc">
+            </iframe>
+            <br />
+        <h6 align="center">
+            More coming soon
+        </h6>
+        <br />
+        </p>
+    </div>
+    <hr color="black" width="50%" />
+    <br>
+    <div align="center">
+        <a class="btn-custom" href="index.html">
             <u>
-             Back to my homepage
+                Back to my homepage
             </u>
-           </a>
-           🔗
-          </div>
-          <br/>
-          <br/>
-         </br>
-        </br>
-       </br>
-      </br>
-     </br>
+        </a>
+        🔗
+    </div>
+    <br />
+    <br />
     </br>
-   </br>
-  </br>
- </body>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
+    </br>
+</body>
+
 </html>
