Update for Thingiverse

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
                         width=24px></a>
                 <a class="mylinks" href="https://www.instagram.com/tanmaychhatbar/"><img src="images/logo_insta.png"
                         width=24px></a>
+                <a class="mylinks" href="https://www.thingiverse.com/tanmaychhatbar/designs"><img src="images/logo_thingiverse.png"
+                        width=24px></a>
                 <br><br><br>
             </div>
         </div>
