--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
                 <hr color="black" width="75%" />
                 <br>
 
-                <a class="mylinks" href="https://grabcad.com/tanmay.chhatbar-1"><img src="images/logo_grabcad.png"
+                <a class="mylinks" href="https://grabcad.com/tanmay.chhatbar-1" target="_blank"><img src="images/logo_grabcad.png"
                     width=24px></a>
-                    <a class="mylinks" href="https://github.com/TanmayChhatbar"><img src="images/logo_github.png"
+                <a class="mylinks" href="https://github.com/TanmayChhatbar" target="_blank"><img src="images/logo_github.png"
                     width=24px></a>
-                <a class="mylinks" href="https://linkedin.com/in/tanmaychhatbar"><img src="images/logo_linkedin.png"
-                        width=24px></a>
-                <a class="mylinks" href="https://www.youtube.com/c/TanmayChhatbar/"><img src="images/logo_yt.png"
-                        width=24px></a>
-                <a class="mylinks" href="https://www.instagram.com/tanmaychhatbar/"><img src="images/logo_insta.png"
-                        width=24px></a>
-                <a class="mylinks" href="https://www.thingiverse.com/tanmaychhatbar/designs"><img src="images/logo_thingiverse.png"
-                        width=24px></a>
+                <a class="mylinks" href="https://linkedin.com/in/tanmaychhatbar" target="_blank"><img src="images/logo_linkedin.png"
+                    width=24px></a>
+                <a class="mylinks" href="https://www.youtube.com/c/TanmayChhatbar/" target="_blank"><img src="images/logo_yt.png"
+                    width=24px></a>
+                <a class="mylinks" href="https://www.instagram.com/tanmaychhatbar/" target="_blank"><img src="images/logo_insta.png"
+                    width=24px></a>
+                <a class="mylinks" href="https://www.thingiverse.com/tanmaychhatbar/designs" target="_blank"><img src="images/logo_thingiverse.png"
+                    width=24px></a>
                 <br><br><br>
             </div>
         </div>
