--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <html>
-
 <head>
-
     <title>Tanmay Chhatbar</title>
     <meta charset="UTF-8">
 
@@ -37,7 +35,7 @@
                 <br>
 
                 <p class="mb-6">
-                    Studying at CU-ICAR</p>
+                    Studying at Clemson University (CU-ICAR)</p>
 
                 <hr color="black" width="50%" />
                 <p class="mb-6">
@@ -51,10 +49,9 @@
                                     return decodeURIComponent(pair[1]);
                                 }
                             }
-                            console.log('Query variable %s not found', variable);
                         }
                         var id = Number(getQueryVariable('id'))
-                        console.log(id);
+                        
                         if (id === 3369) {
                             document.write("Applying for CECAS CORE IT Support")
                         }
@@ -65,7 +62,7 @@
                 </p>
 
                 <br>
-                <h5><a href="resume.pdf" class="btn-custom">More About Me</a> 🔗</h5>
+                <h5><a href="resume.pdf" class="btn-custom">My Résumé</a> 🔗</h5>
                 <br>
                 <h4><a href="projects.html" class="btn-custom">My projects</a> 🔗</h4>
                 <br>
@@ -93,7 +90,5 @@
 <script src="js/popper.min.js"></script>-->
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
 
-
 </body>
-
 </html>
