--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <br>
 
                 <p class="mb-6">
-                    Studying at CU-ICAR</p>
+                    Studying at Clemson University (CU-ICAR)</p>
 
                 <hr color="black" width="50%" />
                 <p class="mb-6">
@@ -62,7 +62,7 @@
                 </p>
 
                 <br>
-                <h5><a href="resume.pdf" class="btn-custom">More About Me</a> 🔗</h5>
+                <h5><a href="resume.pdf" class="btn-custom">My Résumé</a> 🔗</h5>
                 <br>
                 <h4><a href="projects.html" class="btn-custom">My projects</a> 🔗</h4>
                 <br>
