--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <head>
     <title>Tanmay Chhatbar - About Me</title>
     <meta charset="UTF-8">
-    <meta name="description" content="Hey! I'm Tanmay! I love vehicles and technology! Visit my webpage to know more!">
+    <meta name="description" content="Hey! I'm Tanmay!
+    I love vehicles and technology!
+    Visit my webpage to know more!">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         type="text/css">
