add some information for some projects

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <br>
                 <h5><a href="resume.pdf" class="btn-custom">My Résumé</a> 🔗</h5>
                 <br>
-                <h4><a href="projects.html" class="btn-custom">My projects</a> 🔗</h4>
+                <h4><a href="projects_gen.html" class="btn-custom">My projects</a> 🔗</h4>
                 <br>
                 <hr color="black" width="75%" />
                 <br>
