--- a/projects_gen.html
+++ b/projects_gen.html
@@ -22,6 +22,9 @@
             <div class="slide s12">
                 <h1>Small scale ADAS</h1>
                 <h3>Clemson University - International Center of Automotive Research</h3>
+                <p>
+                    As part of our capstone project for the course 'Automotive Electronics Integration', we were tasked to introduce and demonstrate ADAS systems in a scale vehicle.<br>The video goes over our approach and results in introducing features including:<ul><li>Lane-Keep Assist</li><li>Adaptive Cruise Control</li></ul>
+                </p>
                 </br>
                 <p>
                     <iframe src=https://www.youtube.com/embed/nMBGIg3d_ZA></iframe>
