--- a/projects_gen.html
+++ b/projects_gen.html
@@ -34,8 +34,7 @@
                 <h1>Autonomous Robot</h1>
                 <h3>Clemson University - International Center of Automotive Research</h3>
                 <p>
-                    The course 'Autonomy: Science and Systems' at CU-ICAR required programming a Turtlebot3 to take on the following challenges.<ul><li>Wall following</li><li>Obstacle avoidance</li><li>Line following</li><li>Stop-sign detection</li><li>Apriltag following</li></ul>
-The first video goes over the final demonstration. The second summarizes the control logic we introduced.
+                    The course 'Autonomy: Science and Systems' at CU-ICAR required programming a Turtlebot3 to take on the following challenges.<ul><li>Wall following</li><li>Obstacle avoidance</li><li>Line following</li><li>Stop-sign detection</li><li>Apriltag following</li></ul>The first video goes over the final demonstration. The second summarizes the control logic we introduced.
                 </p>
                 </br>
                 <p>
@@ -65,6 +64,13 @@ The first video goes over the final demonstration. The second summarizes the con
                 </br>
                 <p>
                     <iframe src=https://www.youtube.com/embed/pWplQDCc0bk></iframe>
+                </p>
+            </div>
+            <div class="slide s22">
+                <h1>DIY Smartwatch</h1>
+                <h3>Designed, manufactured and programmed by self</h3>
+                <p>
+                    Expenditure on education and improvement is okay, buying frivolous objects is not.<br>I wanted a smartwatch.<br>There's only one solution. <a style="color:grey" href="https://github.com/TanmayChhatbar/esp32_smartwatch">DIY</a>
                 </p>
             </div>
         </div>
@@ -131,7 +137,7 @@ The first video goes over the final demonstration. The second summarizes the con
             autoScrolling: true,
             navigation: true,
             anchors: ['auto','plotter','aero'],
-            navigationTooltips: ['Automotive Projects','Plotter','Aeromodelling','Factory','Activity'],
+            navigationTooltips: ['Automotive Projects','Other Projects','Aeromodelling','Factory','Activity'],
             showActiveTooltip: true,
             slidesNavigation: true,
             controlArrows: false,
