add tooltip text

--- a/projects_gen.html
+++ b/projects_gen.html
@@ -136,7 +136,7 @@
         new fullpage('#fullPage', {
             autoScrolling: true,
             navigation: true,
-            anchors: ['auto','plotter','aero'],
+            anchors: ['automotive','other','aero','factory','fun'],
             navigationTooltips: ['Automotive Projects','Other Projects','Aeromodelling','Factory','Activity'],
             showActiveTooltip: true,
             slidesNavigation: true,
