add tooltip text

--- a/projects_gen.html
+++ b/projects_gen.html
@@ -59,7 +59,7 @@
                 <h1>i1Pro 3 Automated Plotter 2021</h1>
                 <h3>Designed, manufactured and programmed by self</h3>
                 <p>
-                    Through the first wave of the COVID-19 pandemic, I took up a project for one of my mentors to automate a color-scanning tool using hobby-grade electronics.<br>This video shows testing of the solution I designed and manufactured.
+                    I took up a project for one of my mentors to automate a color-scanning tool using hobby-grade electronics.<br>This video shows testing of the solution I designed and manufactured.
                 </p>
                 </br>
                 <p>
