change some stuff, add todo list

--- a/projects_gen.html
+++ b/projects_gen.html
@@ -41,17 +41,6 @@
                     <iframe src=https://www.youtube.com/embed/YXchdEtqzsE></iframe>
                 </p>
             </div>
-            <div class="slide s14">
-                <h1>Project Render</h1>
-                <h3>In learning Blender modelling software</h3>
-                <p>
-                    I learnt how to use blender, the software out of interest.<br>In this short clip, I have tried to showcase my skills at modelling and animation as a submission for one of the certified courses on EdX that taught blender.<br>All animations on this page, and their assets have been modelled, textured and rendered by me.
-                </p>
-                </br>
-                <p>
-                    <iframe src=https://www.youtube.com/embed/FBkQdyRUgO4></iframe>
-                </p>
-            </div>
         </div>
 
         <div class="section">
@@ -71,6 +60,17 @@
                 <h3>Designed, manufactured and programmed by self</h3>
                 <p>
                     Expenditure on education and improvement is okay, buying frivolous objects is not.<br>I wanted a smartwatch.<br>There's only one solution. <a style="color:grey" href="https://github.com/TanmayChhatbar/esp32_smartwatch">DIY</a>
+                </p>
+            </div>
+            <div class="slide s23">
+                <h1>Project Render</h1>
+                <h3>In learning Blender modelling software</h3>
+                <p>
+                    I learnt how to use blender, the software out of interest.<br>In this short clip, I have tried to showcase my skills at modelling and animation as a submission for one of the certified courses on EdX that taught blender.<br>All animations on this page, and their assets have been modelled, textured and rendered by me.
+                </p>
+                </br>
+                <p>
+                    <iframe src=https://www.youtube.com/embed/FBkQdyRUgO4></iframe>
                 </p>
             </div>
         </div>
@@ -103,6 +103,14 @@
                 <p>
                     <iframe src=https://www.youtube.com/embed/uV_CYRJlwYE></iframe>
                     <iframe src=https://www.youtube.com/embed/nO6BWNPSGuY></iframe>
+                </p>
+            </div>
+            <div class="slide s35">
+                <h1>Acrobatics</h1>
+                <h3>What fun is flying straight</h3>
+                </br>
+                <p>
+                    <iframe src=></iframe>
                 </p>
             </div>
         </div>
