--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <style>
         body {
             position: absolute;
-            background: #eee;
+            background: #000;
             width: 100%;
             height: 100%;
         }
@@ -24,23 +24,39 @@
             margin-left: 30px;
             margin-right: 30px;
         }
+        .subheading {
+            color: grey;
+        }
+        .mb-6 {
+            color: #418FDD;
+        }
+        .mb-7 {
+            color: white;
+        }
+        .btn-custom {
+            color: darkgray;
+            text-decoration: underline;
+        }
+        .btn-custom:hover {
+            color: grey;
+        }
     </style>
 </head>
 
 <body>
     <div>
         <div class="col-md-12 text text-center">
-            <div class="img mb-6 pt-5"><img class="rounded-circle" src="images/photo.png" alt=""
+            <div class="img mb-6 pt-5"><img class="rounded-circle" src="images/photo.jpeg" alt=""
                     style="height:35vh;width:height;"></div>
             <div class="desc pt-3">
                 <h3 class="subheading">Hello! I'm</h3>
                 <h1 class="mb-6">Tanmay Chhatbar</h1>
                 <br>
 
-                <p class="mb-6">
+                <p class="mb-7">
                     Studying at Clemson University (CU-ICAR)</p>
 
-                <hr color="black" width="50%" />
+                <hr color="white" width="50%" />
                 <p class="mb-6">
                     <script type="text/javascript">
                         function getQueryVariable(variable) {
@@ -69,16 +85,16 @@
                 <br>
                 <h4><a href="projects_gen.html" class="btn-custom">My projects</a> 🔗</h4>
                 <br>
-                <hr color="black" width="75%" />
+                <hr color="white" width="75%" />
                 <br>
 
                 <a class="mylinks" href="https://linkedin.com/in/tanmaychhatbar" target="_blank"><img src="images/logo_linkedin.png"
                     width=24px></a>
-                <a class="mylinks" href="https://github.com/TanmayChhatbar" target="_blank"><img src="images/logo_github.png"
+                <a class="mylinks" href="https://github.com/TanmayChhatbar" target="_blank"><img src="images/logo_github_light.png"
                     width=24px></a>
                 <a class="mylinks" href="https://grabcad.com/tanmay.chhatbar-1" target="_blank"><img src="images/logo_grabcad.png"
                     width=24px></a>
-                <a class="mylinks" href="https://www.youtube.com/c/TanmayChhatbar/" target="_blank"><img src="images/logo_yt.png"
+                <a class="mylinks" href="https://www.youtube.com/c/TanmayChhatbar/" target="_blank"><img src="images/logo_yt_light.png"
                     width=24px></a>
                 <a class="mylinks" href="https://www.thingiverse.com/tanmaychhatbar/designs" target="_blank"><img src="images/logo_thingiverse.png"
                         width=24px></a>
