prusa, change order of links

--- a/index.html
+++ b/index.html
@@ -81,25 +81,21 @@
                 </p>
 
                 <br>
-                <h5><a href="resume.pdf" class="btn-custom">My Résumé</a> 🔗</h5>
-                <br>
                 <h4><a href="projects_gen.html" class="btn-custom">My projects</a> 🔗</h4>
+                <br>
+                <h5><a href="resume.pdf" class="btn-custom">My Résumé</a> 🔗</h5>
                 <br>
                 <hr color="white" width="75%" />
                 <br>
 
-                <a class="mylinks" href="https://linkedin.com/in/tanmaychhatbar" target="_blank"><img src="images/logo_linkedin.png"
-                    width=24px></a>
-                <a class="mylinks" href="https://github.com/TanmayChhatbar" target="_blank"><img src="images/logo_github_light.png"
-                    width=24px></a>
-                <a class="mylinks" href="https://grabcad.com/tanmay.chhatbar-1" target="_blank"><img src="images/logo_grabcad.png"
-                    width=24px></a>
-                <a class="mylinks" href="https://www.youtube.com/c/TanmayChhatbar/" target="_blank"><img src="images/logo_yt_light.png"
-                    width=24px></a>
-                <a class="mylinks" href="https://www.thingiverse.com/tanmaychhatbar/designs" target="_blank"><img src="images/logo_thingiverse.png"
-                        width=24px></a>
-                <a class="mylinks" href="https://www.instagram.com/tanmaychhatbar/" target="_blank"><img src="images/logo_insta.png"
-                    width=24px></a>
+                <a class="mylinks" href="https://linkedin.com/in/tanmaychhatbar" target="_blank"><img src="images/logo_linkedin.png" width=24px></a>
+                <a class="mylinks" href="https://github.com/TanmayChhatbar" target="_blank"><img src="images/logo_github_light.png" width=24px></a>
+                <a class="mylinks" href="https://grabcad.com/tanmay.chhatbar-1" target="_blank"><img src="images/logo_grabcad.png" width=24px></a>
+                <a class="mylinks" href="https://www.youtube.com/c/TanmayChhatbar/" target="_blank"><img src="images/logo_yt_light.png" width=24px></a>
+                <a class="mylinks" href="https://www.printables.com/social/202355-tanmaychhatbar/about" target="_blank"><img src="images/logo_printables.jpg" width=24px></a>
+                <!-- <a class="mylinks" href="https://www.thingiverse.com/tanmaychhatbar/designs" target="_blank"><img src="images/logo_thingiverse.png" width=24px></a> -->
+                <a class="mylinks" href="https://www.instagram.com/tanmaychhatbar/" target="_blank"><img src="images/logo_insta.png" width=24px></a>
+                
                 <br><br><br>
             </div>
         </div>
