update projects pg5

--- a/projects_gen.html
+++ b/projects_gen.html
@@ -140,10 +140,10 @@
         </div>
         <div class="section">
             <div class="slide s51">
-                <h1>What is fun, motivates you</h1>
-                <h3>What is love?</h3>
+                <h1>What is fun, motivates you.</h1>
+                <h3>What is love, baby</h3>
                 <p class="info">
-                    Baby, don't hurt me, don't hurt me, no more
+                    Don't hurt me, don't hurt me, no more.
                 </p>
                 </br>
                 <p>
