--- a/projects_gen.html
+++ b/projects_gen.html
@@ -18,6 +18,10 @@
                 <p class="info">
                     As a challenge, I engineered a datalogger for my car to collect inertial and GPS data while participating in AutoX events.<br>The result was this ESP32-based device, for which more information can be found on <a style="color:grey" href="https://github.com/TanmayChhatbar/car_datalogger" target="_blank"><u>GitHub</u></a>.<br><br><u>TTGO TS 1.4</u> ESP32-based board, with built-in <u>MPU9250 IMU</u> and a microSD card reader, was used.<br><u>Adafruit Ultimate GPS</u> module is used to get GPS data.<br>Inertial data is collected at around 300Hz, GPS data is collected at 5Hz.
                 </p>
+                </br>
+                <p>
+                    <iframe src="comingsoon.html"></iframe>
+                </p>
             </div>
             <div class="slide s12">
                 <h1>Small scale ADAS</h1>
@@ -27,7 +31,7 @@
                 </p>
                 </br>
                 <p>
-                    <iframe src=https://www.youtube.com/embed/nMBGIg3d_ZA></iframe>
+                    <iframe src="https://www.youtube.com/embed/nMBGIg3d_ZA"></iframe>
                 </p>
             </div>
             <div class="slide s13">
@@ -42,7 +46,7 @@
                 </p>
                 </br>
                 <p>
-                    <iframe src=https://www.youtube.com/embed/YXchdEtqzsE></iframe>
+                    <iframe src="https://www.youtube.com/embed/YXchdEtqzsE"></iframe>
                 </p>
             </div>
         </div>
@@ -55,7 +59,7 @@
                 </p>
                 </br>
                 <p>
-                    <iframe src=https://www.youtube.com/embed/pWplQDCc0bk></iframe>
+                    <iframe src="https://www.youtube.com/embed/pWplQDCc0bk"></iframe>
                 </p>
             </div>
             <div class="slide s22">
@@ -63,6 +67,10 @@
                 <h3>Designed, manufactured and programmed by self</h3>
                 <p class="info">
                     Expenditure on education and improvement is okay, buying frivolous objects is not.<br>I wanted a smartwatch.<br>There's only one solution. <a style="color:grey" href="https://github.com/TanmayChhatbar/esp32_smartwatch" target="_blank"><u>DIY</u></a><br><br>The watch is capable of connecting to WiFi to <u>fetch time</u>, as well as keeping count of the number of <u>steps</u> the user walks daily.
+                </p>
+                </br>
+                <p>
+                    <iframe src="comingsoon.html"></iframe>
                 </p>
             </div>
             <div class="slide s23">
@@ -73,7 +81,7 @@
                 </p>
                 </br>
                 <p>
-                    <iframe src=https://www.youtube.com/embed/FBkQdyRUgO4></iframe>
+                    <iframe src="https://www.youtube.com/embed/FBkQdyRUgO4"></iframe>
                 </p>
             </div>
         </div>
@@ -87,8 +95,8 @@
                 </p>
                 </br>
                 <p>
-                    <iframe src=https://www.youtube.com/embed/G851yVFitqQ></iframe>
-                    <iframe src=https://www.youtube.com/embed/twtrokqZ5k0></iframe>
+                    <iframe src="https://www.youtube.com/embed/G851yVFitqQ"></iframe>
+                    <iframe src="https://www.youtube.com/embed/twtrokqZ5k0"></iframe>
                 </p>
             </div>
             <div class="slide s32">
@@ -97,12 +105,20 @@
                 <p class="info">
                     SAE Aero Design East, a competition held in Fort Worth, Texas, was an international-level challenge taken up by <u>6 students</u> from our university.<br>An aircraft with a 12ft wingspan, weighing less than 7.5kg was designed and manufactured to lift <u>17.5kg of additional payload</u>, including 50-odd tennis balls, and steel plates.<br><br>The aircraft performed well through heavy crosswinds for a first-year team to bag <u>7th place</u> in Mission Performance.
                 </p>
+                </br>
+                <p>
+                    <iframe src="comingsoon.html"></iframe>
+                </p>
             </div>
             <div class="slide s33">
                 <h1>Speedy G</h1>
                 <h3>"I am Speed!", said the Little Bird</h3>
                 <p class="info">
                     As a petrolhead, it is my passion to make things go fast.<br>This little plane, with a tiny 0.6m wingspan, was designed to be capable of flying safely at <u>160+kph</u>.<br>It was designed entirely by a group of 2 people, with aerodynamic efficiency and lightweightness, the main goals.
+                </p>
+                </br>
+                <p>
+                    <iframe src="comingsoon.html"></iframe>
                 </p>
             </div>
             <div class="slide s34">
@@ -113,8 +129,8 @@
                 </p>
                 </br>
                 <p>
-                    <iframe src=https://www.youtube.com/embed/uV_CYRJlwYE></iframe>
-                    <iframe src=https://www.youtube.com/embed/nO6BWNPSGuY></iframe>
+                    <iframe src="https://www.youtube.com/embed/uV_CYRJlwYE"></iframe>
+                    <iframe src="https://www.youtube.com/embed/nO6BWNPSGuY"></iframe>
                 </p>
             </div>
             <div class="slide s35">
@@ -125,7 +141,7 @@
                 </p>
                 </br>
                 <p>
-                    <iframe src=></iframe>
+                    <iframe src="comingsoon.html"></iframe>
                 </p>
             </div>
         </div>
@@ -135,6 +151,10 @@
                 <h3>Stagnation isn't good for mind or business</h3>
                 <p class="info">
                     I've designed and manufactured multiple automation solutions for use in a factory.<br>These include automatic <u>bottle fillers</u> for packaging soaps and detergents, and miscellaneous devices for streamlining workflow in processing of potato starch.
+                </p>
+                </br>
+                <p>
+                    <iframe src="comingsoon.html"></iframe>
                 </p>
             </div>
         </div>
@@ -147,8 +167,8 @@
                 </p>
                 </br>
                 <p>
-                    <iframe src=https://www.youtube.com/embed/L_vGYdL0Qy8></iframe>
-                    <iframe src=https://www.youtube.com/embed/rsrUuE2ELrc></iframe>
+                    <iframe src="https://www.youtube.com/embed/L_vGYdL0Qy8"></iframe>
+                    <iframe src="https://www.youtube.com/embed/rsrUuE2ELrc"></iframe>
                 </p>
             </div>
         </div>
