second video space for autonomous robot

--- a/projects_gen.html
+++ b/projects_gen.html
@@ -47,6 +47,7 @@
                 </br>
                 <p>
                     <iframe src="https://www.youtube.com/embed/YXchdEtqzsE"></iframe>
+                    <iframe src="comingsoon.html"></iframe>
                 </p>
             </div>
         </div>
