update current projects

--- a/projects_gen.html
+++ b/projects_gen.html
@@ -42,12 +42,11 @@
 				<ul class="feat"><li>Wall following</li><li>Obstacle avoidance</li><li>Line following</li><li>Stop-sign detection</li><li>Apriltag following</li></ul>
 				<p class="info">
 					The Turtlebot3 is equipped with a <u>Raspberry Pi 4</u> computer which is responsible for much of the onboard data processing and publishing.<br><u>OpenCR</u> board is in charge of receiving commands from the Pi and powering and controlling power-intensive components including servos, motors, LiDAR and camera(s).<br>Computationally intensive tasks were offloaded onto a more powerful <u>Linux laptop</u>.
-					<br><br>The first video goes over the final demonstration. The second summarizes the control logic we introduced.
+					<br><br>The video goes over the final demonstration.
                 </p>
                 </br>
                 <p>
                     <iframe src="https://www.youtube.com/embed/YXchdEtqzsE"></iframe>
-                    <iframe src="comingsoon.html"></iframe>
                 </p>
             </div>
         </div>
