add speedy g vid

--- a/projects_gen.html
+++ b/projects_gen.html
@@ -118,7 +118,7 @@
                 </p>
                 </br>
                 <p>
-                    <iframe src="comingsoon.html"></iframe>
+                    <iframe src="https://www.youtube.com/embed/T2X-0we-XOU"></iframe>
                 </p>
             </div>
             <div class="slide s34">
