--- a/projects_gen_backup.html
+++ b/projects_gen_backup.html
@@ -114,11 +114,11 @@
                 <h1>Speedy G</h1>
                 <h3>"I am Speed!", said the Little Bird</h3>
                 <p class="info">
-                    As a petrolhead, it is my passion to make things go fast.<br>This little plane, with a tiny 0.6m wingspan, was designed to be capable of flying safely at <u>160+kph</u>.<br>It was designed entirely by a group of 2 people, with aerodynamic efficiency and lightweightness, the main goals.
+                    As a petrolhead, it is my passion to make things go fast.<br>This little plane, with a tiny 0.6m wingspan, was designed to be capable of flying safely at <u>160+kph</u>!<br><br>It was designed entirely by a group of 2 people, with aerodynamic efficiency and lightweightness, the main goals.
                 </p>
                 </br>
                 <p>
-                    <iframe src="comingsoon.html"></iframe>
+                    <iframe src="https://www.youtube.com/embed/T2X-0we-XOU"></iframe>
                 </p>
             </div>
             <div class="slide s34">
