short preview video of the smartwatch

--- a/projects_gen.html
+++ b/projects_gen.html
@@ -70,7 +70,7 @@
                 </p>
                 </br>
                 <p>
-                    <iframe src="comingsoon.html"></iframe>
+                    <iframe src="https://www.youtube.com/embed/iW4tt_eioQQ"></iframe>
                 </p>
             </div>
             <div class="slide s23">
