--- a/projects_gen_backup.html
+++ b/projects_gen_backup.html
@@ -70,7 +70,7 @@
                 </p>
                 </br>
                 <p>
-                    <iframe src="comingsoon.html"></iframe>
+                    <iframe src="https://www.youtube.com/embed/iW4tt_eioQQ"></iframe>
                 </p>
             </div>
             <div class="slide s23">
@@ -114,7 +114,7 @@
                 <h1>Speedy G</h1>
                 <h3>"I am Speed!", said the Little Bird</h3>
                 <p class="info">
-                    Who doesn't like fast vehicles? Named after the iconic Looney Tunes character, Speedy G is a tiny 600mm RC plane that we designed to use a 1300mAh 3S battery powering a 2207 T-Motor drone motor through a 35A ESC, spinning a 2-blade 7x4 prop.<br>The design is almost entirely foamboard. The wings have no central spar. Instead, it is a stressed skin design. The front of the fuselage needed to be hollow for access to the battery, and is balsa. The motor mounts are 3D printed out of ABS.<br><br>We've measured doing over 160kph with GPS, around 100mph!
+                    Who doesn't like fast vehicles? Named after the iconic Looney Tunes character, Speedy G is a tiny 600mm RC plane that we designed to use a 1300mAh 3S battery powering a 2207 T-Motor drone motor through a 35A ESC, spinning a 2-blade 7x4 prop.<br><br>The design is almost entirely foamboard. The wings have no central spar. Instead, it is a stressed skin design. The front of the fuselage needed to be hollow for access to the battery, and is balsa. The motor mounts are 3D printed out of ABS.<br><br>We've measured doing over 160kph with GPS, around 100mph!
                 </p>
                 </br>
                 <p>
