--- a/projects_gen.html
+++ b/projects_gen.html
@@ -53,7 +53,7 @@
                 <h1>Motorcycle Gear Shifting Automation</h1>
                 <h3>Capstone Project - Bachelor's in Mechanical Engineering</h3>
                 <p class="info">
-                    For our graduation project, we decided to design and fabricate a <u>bolt-on automation system</u> to convert a motorcycle's controls into those similar to an automatic scooter.<br>This included automating the <u>clutch, gears and throttle</u> to follow rider input while considering engine RPM, speed, etc. <br><br>This video was made as a submission to the CS50 MOOC course, and shows a representation of what we had imaged for the project.
+                    For our undergraduate project, we decided to design and fabricate a <u>bolt-on automation system</u> to convert a motorcycle's controls into those similar to an automatic scooter.<br>This included automating the <u>clutch, gears and throttle</u> to follow rider input while considering engine RPM, speed, etc. <br><br>This video was made as a submission to the CS50 MOOC course, and shows a representation of what we had imaged for the project.
                 </p>
                 </br>
                 <p>
